<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/img_logo_signup"
        android:layout_width="254dp"
        android:layout_height="63dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="100dp"
        android:scaleType="fitXY"
        android:src="@drawable/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_display_name_signup"
        android:layout_width="256dp"
        android:layout_height="34dp"
        android:layout_marginTop="64dp"
        android:background="@drawable/button_bg_rectangle_curve_transparent"
        android:fontFamily="@font/lato_light"
        android:hint="@string/label_hint_full_name_signup"
        android:imeOptions="actionNext"
        android:inputType="text"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorGreyFont"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/img_logo_signup"
        app:layout_constraintStart_toStartOf="@+id/img_logo_signup"
        app:layout_constraintTop_toBottomOf="@+id/img_logo_signup" />

    <ImageView
        android:id="@+id/img_person_signup_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_person_white_24dp"
        android:tint="@color/colorPurple"
        app:layout_constraintBottom_toBottomOf="@+id/edt_display_name_signup"
        app:layout_constraintEnd_toStartOf="@+id/edt_display_name_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_display_name_signup" />


    <EditText
        android:id="@+id/edt_username_signup"
        android:layout_width="256dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg_rectangle_curve_transparent"
        android:fontFamily="@font/lato_light"
        android:hint="@string/label_hint_email_signup"
        android:imeOptions="actionNext"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorGreyFont"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_display_name_signup"
        app:layout_constraintStart_toStartOf="@+id/edt_display_name_signup"
        app:layout_constraintTop_toBottomOf="@+id/edt_display_name_signup" />

    <ImageView
        android:id="@+id/img_email_signup_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:src="@drawable/ic_email_white_24dp"
        android:tint="@color/colorPurple"
        app:layout_constraintBottom_toBottomOf="@+id/edt_username_signup"
        app:layout_constraintEnd_toStartOf="@+id/edt_username_signup"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/edt_username_signup" />

    <EditText
        android:id="@+id/edt_password_signup"
        android:layout_width="256dp"
        android:layout_height="34dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg_rectangle_curve_transparent"
        android:fontFamily="@font/lato_light"
        android:hint="@string/label_hint_password_signup"
        android:imeOptions="actionNext"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingBottom="8dp"
        android:paddingEnd="8dp"
        android:paddingStart="8dp"
        android:paddingTop="8dp"
        android:textColor="@color/colorGreyFont"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="@+id/edt_username_signup"
        app:layout_constraintStart_toStartOf="@+id/edt_username_signup"
        app:layout_constraintTop_toBottomOf="@+id/edt_username_signup" />

    <ImageView
        android:id="@+id/img_lock_signup_fragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="34dp"
        android:src="@drawable/ic_lock_white_24dp"
        android:tint="@color/colorPurple"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edt_password_signup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_email_signup_fragment"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_create_account_signup"
        android:layout_width="251dp"
        android:layout_height="34dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/button_bg_rectangle"
        android:fontFamily="@font/lato_light"
        android:padding="8dp"
        android:text="@string/label_create_account_signup"
        android:textColor="@color/colorWhiteFont"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/edt_password_signup"
        app:layout_constraintStart_toStartOf="@+id/edt_password_signup"
        app:layout_constraintTop_toBottomOf="@+id/edt_password_signup"
        app:layout_constraintVertical_bias="0.19999999" />


</android.support.constraint.ConstraintLayout>